# Visualizer

./: CMakeLists.txt
res/shaders/: object_shader.frag  object_shader.vert
src/: main.cpp
src/graphics/: Image.cpp  Image.hpp  Texture2D.cpp  Texture2D.hpp  Vertex.cpp  Vertex.hpp
src/loaders/: MeshLoader.cpp  MeshLoader.hpp  ObjectLoader.cpp  ObjectLoader.hpp
src/meshes/: Cube.cpp  Cube.hpp  Grid.cpp  Grid.hpp  ObjectModel.cpp  ObjectModel.hpp
